Fix layout shifting

--- a/src/components/HeaderTitle/HeaderTitle.module.scss
+++ b/src/components/HeaderTitle/HeaderTitle.module.scss
@@ -5,6 +5,7 @@
   line-height: 28px;
 
   width: 100%;
+  min-height: 28px;
 
   display: flex;
   justify-content: space-between;
