--- a/src/pages/AppLayout/AppLayout.module.scss
+++ b/src/pages/AppLayout/AppLayout.module.scss
@@ -18,9 +18,9 @@
       margin: 20px;
     }
 
-    &:empty {
-      height: 0;
-    }
+    // &:empty {
+    //   height: 0;
+    // }
 
     &.borderedHeader {
       border-right: 1px solid var(--devider);
